--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@mantine/core": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
